--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         new Chart(ctx, {
           type: "pie",
           data: {
-            labels: ["Powierzchnia otrzymana", "Skrawki (reszta)"],
+            labels: ["karton pozyskany", "Skrawki"],
             datasets: [{
               data: [totalOutput, totalScrap]
             }]
@@ -46,3 +46,4 @@
   </script>
 </body>
 </html>
+
