--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 
-
-
-
 <!DOCTYPE html>
 <html lang="pl"></html>
 <head>
@@ -97,8 +94,8 @@
             labels: ["karton otrzymany", "Skrawki"],
             datasets: [{
               data: [totalOutput, totalScrap],
-              backgroundColor: ["956f8a"],
-              borderColor: ["#4f063a", "#999999"],
+              backgroundColor: ["#ffb6d5", "#4f063a"], // jasno różowy, ciemnofioletowy
+              borderColor: ["#fff", "#fff"],
               borderWidth: 2
             }]
           },
