--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     #pieChart {
       display: block;
       margin: 32px auto 0 auto;
-      background: #e3f2fd;
+      background: #ffd5e;
       border-radius: 12px;
       box-shadow: 0 2px 8px hwb(0 60% 40%);
       padding: 12px;
@@ -112,3 +112,4 @@
   </script>
 </body>
 </html>
+
