--- a/main.html
+++ b/main.html
@@ -96,7 +96,7 @@
             <a href="wykres4.html">wykres 4</a>
         </div>
     </nav>
-    <div class="main-content">s
+    <div class="main-content">
         <h1>Witamy w Karton!</h1>
         <p>Wybierz wykres, który chcesz zobaczyć:</p>
         <div class="chart-links">
@@ -119,4 +119,5 @@
         </div>
     </div>
 </body>
+
 </html>
