--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karton - Strona główna</title>
+    <title>boxmat wykresy - Strona główna</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -87,7 +87,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="navbar-logo">Karton</div>
+        <div class="navbar-logo">boxmat</div>
         <div class="navbar-links">
             <a href="#">Strona główna</a>
             <a href="https://a0is.github.io/karton/index.html">  Wykres 1</a>
@@ -97,7 +97,7 @@
         </div>
     </nav>
     <div class="main-content">
-        <h1>Witamy w Karton!</h1>
+        <h1>Witamy w boxmat!</h1>
         <p>Wybierz wykres, który chcesz zobaczyć:</p>
         <div class="chart-links">
             <a class="chart-card" href="https://a0is.github.io/karton/index.html">
@@ -121,3 +121,4 @@
 </body>
 
 </html>
+
