--- a/wykres2.html
+++ b/wykres2.html
@@ -48,7 +48,7 @@
     #barChart {
       display: block;
       margin: 32px auto 0 auto;
-      background: #fffffa;
+      background: #fff;
       border-radius: 12px;
       box-shadow: 0 2px 8px hwb(0 60% 40%);
       padding: 12px;
@@ -123,4 +123,5 @@
   </script>
 </body>
 </html>
+
 
