--- a/wykres2.html
+++ b/wykres2.html
@@ -64,19 +64,12 @@
   <div id="controls">
     <label for="zakres">Wybierz zakres danych:</label>
     <select id="zakres">
-      <optgroup label="Dni">
-        <option value="dzien_11.csv">Dzień 11</option>
-        <option value="dzien_14.csv">Dzień 14</option>
-        <option value="dzien_22.csv">Dzień 22</option>
-        <option value="dzien_28.csv">Dzień 28</option>
-        <option value="dzien_29.csv">Dzień 29</option>
-      </optgroup>
-      <optgroup label="Tygodnie">
-        <option value="tydzien1.csv">Tydzień 1</option>
-        <option value="tydzien2.csv">Tydzień 2</option>
-      </optgroup>
-      <optgroup label="Miesiąc">
-        <option value="miesiac.csv">Miesiąc</option>
+      <optgroup label="Zestawy testowe">
+        <option value="test.json">Testowy zestaw</option>
+        <option value="29.json">Dzień 29</option>
+        <option value="tydzien1.json">Tydzień 1</option>
+        <option value="tydzien2.json">Tydzień 2</option>
+        <option value="miesiac.json">Miesiąc</option>
       </optgroup>
     </select>
   </div>
@@ -85,24 +78,22 @@
   </div>
   <script>
     let chart;
-    function loadCSVAndDrawChart(fileName) {
-      Papa.parse(fileName, {
-        download: true,
-        header: true,
-        complete: function(results) {
-          const data = results.data;
-          const labels = data.map(row => row['data'] || row['Data'] || row['date'] || row['Date']);
-          const values = data.map(row => parseFloat(row['wartosc'] || row['Wartosc'] || row['value'] || row['Value']));
-          drawChart(labels, values, fileName);
-        }
-      });
+    function loadJSONAndDrawChart(fileName) {
+      fetch(fileName)
+        .then(response => response.json())
+        .then(json => {
+          const rawValues = json.Z2b.split(';').map(v => parseFloat(v));
+          const labels = rawValues.map((_, i) => `Pomiar ${i + 1}`);
+          drawChart(labels, rawValues, fileName);
+        })
+        .catch(error => console.error("Błąd wczytywania JSON:", error));
     }
 
     function drawChart(labels, values, fileName) {
       const ctx = document.getElementById('myChart').getContext('2d');
       if (chart) chart.destroy();
       chart = new Chart(ctx, {
-         type: 'bar',
+        type: 'bar',
         data: {
           labels: labels,
           datasets: [{
@@ -127,16 +118,17 @@
     }
 
     document.getElementById('zakres').addEventListener('change', function() {
-      loadCSVAndDrawChart(this.value);
+      loadJSONAndDrawChart(this.value);
     });
 
     window.onload = function() {
       const select = document.getElementById('zakres');
-      loadCSVAndDrawChart(select.value);
+      loadJSONAndDrawChart(select.value);
     };
   </script>
 </body>
 </html>
+
 
 
 
