--- a/wykres2.html
+++ b/wykres2.html
@@ -66,11 +66,11 @@
     <label for="zakres">Wybierz zakres danych:</label>
     <select id="zakres">
       <optgroup label="Dni">
-        <option value="dzien_11.csv">Dzień 11</option>
-        <option value="dzien_14.csv">Dzień 14</option>
-        <option value="dzien_22.csv">Dzień 22</option>
-        <option value="dzien_28.csv">Dzień 28</option>
-        <option value="dzien_29.csv">Dzień 29</option>
+        <option value="11.csv">Dzień 11</option>
+        <option value="14.csv">Dzień 14</option>
+        <option value="22.csv">Dzień 22</option>
+        <option value="28.csv">Dzień 28</option>
+        <option value="29.csv">Dzień 29</option>
       </optgroup>
       <optgroup label="Tygodnie">
         <option value="tydzien1.csv">Tydzień 1</option>
@@ -172,5 +172,6 @@
   </script>
 </body>
 </html>
+
 
 
